# cpp-lib-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: mylib-config.cmake.in  silent_copy.cmake  utils.cmake
examples/: CMakeLists.txt
examples/add/: CMakeLists.txt  main.cpp
include/mylib/: export.h  mylib.h
src/: mylib.cpp
tests/: CMakeLists.txt  add_test.cpp
